5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1756_1185.log
== TEST (2019-05-27 14:17:41) 
-- CODE:
vet = array(eval(input"Insira as medidas: "))

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 1
    vet = array(eval(input"Insira as medidas: "))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:17:53) 
-- CODE:
vet = array(input"Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 1
    vet = array(input"Insira as medidas: ")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:18:55) 
-- CODE:
from numpy import*
vet = array(eval(input"Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 2
    vet = array(eval(input"Insira as medidas: ")
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:18:57) 
-- CODE:
from numpy import*
vet = array(eval(input"Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 2
    vet = array(eval(input"Insira as medidas: ")
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:16) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:18) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:27) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:28) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:19:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i <vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:33:49) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < vet):
	if(vet > 99):
		num = num + 1
		i = i + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:13) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < vet):
	if(vet > 99):
		num = num + 1
		i = i + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:51) 
-- CODE:
from numpy import*
vet = input("Insira as medidas: ")

i = 0
num = 0

while(i < vet):
	if(vet > 99):
		num = num + 1
		i = i + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:38:05) 
-- CODE:
from numpy import*
vet = input("Insira as medidas: ")

i = 0
num = 0

while(i < vet):
	if(vet > 99):
		num = num + 1
		i = i + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 08:55:37) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < vet):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:06:41) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < size(vet)):
	if(vet > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:07:10) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < size(vet)):
	if(vet[i] > 99):
		num = num + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:10:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < size(vet)):
	if(vet[i] > 99):
		num = num + 1
		i = i + 1
	else:
		i = i + 1
print(num)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:11:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira as medidas: ")))

i = 0
num = 0

while(i < size(vet)):
	if(vet[i] > 99):
		num = num + 1
		i = i + 1
		print(num)	
	else:
		i = i + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:48:15) 
-- CODE:
from numpy import*
v = array(eval(input("Informe os valores do vetor: \n")))
i = 0
soma = 0
k = 0
while(i<size(v)):
	if(v[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1
print(soma)
		
-- EXECUTION TIME:
0.515814
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:36:15) 
-- CODE:
from numpy import*
v = array(eval(input("Informe os valores do vetor: \n")))
i = 0
soma = 0

while(i<size(v)):
	if(v[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1
print(soma)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:36:44) 
-- CODE:
from numpy import*
v = array(eval(input("Informe os valores do vetor: \n")))
i = 0
soma = 0

while(i<size(v)):
	if(v[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1
print(soma)
		
-- EXECUTION TIME:
0.363794
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:37:01) 
-- CODE:
from numpy import*
v = array(eval(input("Informe os valores do vetor: \n")))
i = 0
soma = 0

while(i<size(v)):
	if(v[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1
print(soma)
		
-- EXECUTION TIME:
0.408347
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:46:52) 
-- CODE:
from numpy import*
v = array(eval(input("Informe os valores do vetor: ")))
i = 0
soma = 0

while(i<size(v)):
	if(v[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1
print(soma)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:46:59) 
-- CODE:
from numpy import*
v = array(eval(input("Informe os valores do vetor: \n")))
i = 0
soma = 0

while(i<size(v)):
	if(v[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1
print(soma)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
